# tap-salesloft

./: Untitled 100_2026-02-02-1444.csv  get_counts.py  meltano.yml  pyproject.toml
tap_salesloft/: client.py  tap.py
tap_salesloft/streams/: __init__.py  activity_histories.py  conversations.py  conversations_extensive.py  transcription_artifacts.py  transcription_sentences.py  transcriptions.py
