[project]
name = "tap-salesloft"
version = "0.0.1"
description = "`tap-salesloft` is a Singer tap for Salesloft, built with the Meltano Singer SDK."
requires-python = ">=3.10"
dependencies = [
    "singer-sdk>=0.50.2",
]
scripts = { "tap-salesloft" = "tap_salesloft.tap:TapSalesloft.cli" }

[tool.poetry]
name = "firehose-tap-salesloft"
version = "0.3.0"
description = "`tap-salesloft` is a Singer tap for Salesloft, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Mark Estey"]
keywords = [
    "ELT",
    "Salesloft",
]
license = "Apache-2.0"
packages = [
    { include = "tap_salesloft" },
]

[tool.poetry.dependencies]
python = "<3.14,>=3.10"
singer-sdk = "~=0.50"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-salesloft = 'tap_salesloft.tap:TapSalesloft.cli'
